--- a/css/styles.css
+++ b/css/styles.css
@@ -82,11 +82,12 @@ button {
 }
 h2 {
   font-weight: 400;
-  font-size: 18px;
+  font-size: 43px;
+  line-height: 1.285;
   text-transform: uppercase;
   text-align: center;
-  color: var(--blue-color);
-  font-family: var(--font-family);
+  color: var(--main-color);
+  font-family: var(--second-family);
 }
 h3 {
   font-family: var(--font-family);
@@ -96,6 +97,14 @@ h3 {
   text-decoration-skip-ink: none;
   text-align: center;
   color: #fff;
+}
+h4 {
+  font-weight: 400;
+  font-size: 18px;
+  text-transform: uppercase;
+  text-align: center;
+  color: var(--blue-color);
+  font-family: var(--font-family);
 }
 .container {
   min-height: 409px;
@@ -299,15 +308,107 @@ h3 {
 /*#endregion Hero____________________ */
 
 /*#region About____________________ */
-
+.about {
+  padding: 0 30px;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
+.about-title {
+  margin-top: 70px;
+}
+.about-img-wrapper {
+  background-image: url(/images/mobile/moon@mobile.png),
+    url("data:image/svg+xml,%3Csvg width='369' height='523' viewBox='0 0 369 523' fill='none' xmlns='http://www.w3.org/2000/svg' %3E%3Ccircle cx='168.908' cy='227.085' r='161.085' fill='%23B5C1F4'/%3E%3Cg filter='url(%23filter0_f_1610_1081)'%3E%3Ccircle cx='107.085' cy='261.915' r='161.085' fill='%23FFEAFC'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_f_1610_1081' x='-154' y='0.829285' width='522.17' height='522.171' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB' %3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/%3E%3CfeGaussianBlur stdDeviation='50' result='effect1_foregroundBlur_1610_1081'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E");
+  background-repeat: no-repeat, no-repeat;
+  background-position: 30px 60px, 0 0;
+}
+.about-image {
+  margin-top: 46px;
+  margin-left: 0;
+}
 .about-text {
+  margin: 16px auto auto auto;
+  max-width: 300px;
   font-weight: 400;
   font-size: 18px;
   letter-spacing: 0.05em;
-  color: var(--siniy-dop-cvet);
+  color: var(--blue-color);
+}
+
+.about-more {
+  margin-top: 16px;
+  background: none;
+  font-weight: 400;
+  font-size: 18px;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--link);
 }
 /*#endregion About____________________ */
+/*#region Benefits____________________ */
+.benefits {
+  margin-top: 70px;
+  position: relative;
+}
+.benefits-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 41px;
+  font-weight: 400;
+  text-align: center;
+}
+.benefits-item {
+}
+.item-field-number {
+  font-family: var(--second-family);
+  font-size: 43px;
+  line-height: 1.285;
+  text-transform: uppercase;
+  color: var(--main-color);
+}
+.item-field-info {
+  margin-top: 20px;
+  font-family: var(--font-family);
+  font-size: 18px;
+  letter-spacing: 0.05em;
+  color: var(--blue-color);
+}
+.benefits-magnolia {
+  background-image: url(/images/mobile/magnoliya@mobile.png);
+  background-repeat: no-repeat;
+  background-position: 0 0px;
+  width: 219px;
+  height: 300px;
+  filter: blur(3px);
+  position: absolute;
+  transform: translateY(-60%);
+  z-index: -1;
+}
 
+/*#endregion Benefits____________________ */
+/*#region Help____________________ */
+.help {
+  margin-top: 100px;
+}
+.help-title {
+  min-width: 310px;
+}
+.help-list {
+  margin-top: 50px;
+}
+.help-item {
+}
+.help-item-image {
+}
+.help-item-info {
+}
+.help-item-title {
+}
+.help-item-content {
+}
+/*#endregion Help____________________ */
 /*#region Header   Modal   Menu____________________ */
 .modal-menu {
   position: absolute;
