--- a/css/styles.css
+++ b/css/styles.css
@@ -318,7 +318,7 @@ h4 {
   margin-top: 70px;
 }
 .about-img-wrapper {
-  background-image: url(images/mobile/moon@mobile.png),
+  background-image: url(../images/mobile/moon@mobile.png),
     url("data:image/svg+xml,%3Csvg width='369' height='523' viewBox='0 0 369 523' fill='none' xmlns='http://www.w3.org/2000/svg' %3E%3Ccircle cx='168.908' cy='227.085' r='161.085' fill='%23B5C1F4'/%3E%3Cg filter='url(%23filter0_f_1610_1081)'%3E%3Ccircle cx='107.085' cy='261.915' r='161.085' fill='%23FFEAFC'/%3E%3C/g%3E%3Cdefs%3E%3Cfilter id='filter0_f_1610_1081' x='-154' y='0.829285' width='522.17' height='522.171' filterUnits='userSpaceOnUse' color-interpolation-filters='sRGB' %3E%3CfeFlood flood-opacity='0' result='BackgroundImageFix'/%3E%3CfeBlend mode='normal' in='SourceGraphic' in2='BackgroundImageFix' result='shape'/%3E%3CfeGaussianBlur stdDeviation='50' result='effect1_foregroundBlur_1610_1081'/%3E%3C/filter%3E%3C/defs%3E%3C/svg%3E");
   background-repeat: no-repeat, no-repeat;
   background-position: 30px 60px, 0 0;
